# w.ai.tlist

./: .dockerignore  .env  .gitattributes  .gitignore  BUILD_INSTRUCTIONS.md  BUILD_SUMMARY.md  CODE_SIGNING_GUIDE.md  DEPLOYMENT.md  DockerFile  Dockerfile  Dockerfile.txt  INSTALLATION_INSTRUCTIONS.md  INSTALLER_README.md  MANUAL_DATABASE_TESTING_GUIDE.md  Makefile  README copy.md  README.md  README_EXECUTABLE.md  USER_GUIDE.md  agents.py  alembic.ini  app.py  build.bat  build_exe.py  build_linux.sh  build_linux_installer.sh  build_macos.sh  build_macos_installer.sh  build_windows.bat  build_windows_installer.bat  cancelled_slot_manager.py  create_all_installers.py  create_linux_appimage.py  create_macos_dmg.py  create_migration.py  docker-compose.yml  env.example  generate_key.py  hygienist_manager.py  launcher.py  (+19 more)
Tests/: Sample CSV - Sheet1.csv  patient_waitlist.csv
alembic/: env.py
cancelled_slots_backups/: cancelled_slots_20250408_163550_862447.csv  cancelled_slots_20250408_163603_039739.csv  cancelled_slots_20250408_163629_876056.csv  cancelled_slots_20250410_140302_708988.csv  cancelled_slots_20250410_142837_306016.csv  cancelled_slots_20250410_142903_273291.csv  cancelled_slots_20250410_142907_246072.csv  cancelled_slots_20250410_173108_039947.csv  cancelled_slots_20250410_173339_575692.csv  cancelled_slots_20250410_184912_220710.csv  cancelled_slots_20250414_153410_678533.csv  cancelled_slots_20250414_154711_101166.csv  cancelled_slots_20250414_164012_505557.csv  cancelled_slots_20250414_164030_837051.csv  cancelled_slots_20250414_164141_991098.csv  cancelled_slots_20250414_172654_750689.csv  cancelled_slots_20250414_172852_825853.csv  cancelled_slots_20250414_190409_317948.csv  cancelled_slots_20250414_190519_363035.csv  cancelled_slots_20250414_191243_711337.csv  cancelled_slots_20250414_191432_721384.csv  cancelled_slots_20250414_194503_500304.csv  cancelled_slots_20250414_195537_753343.csv  cancelled_slots_20250414_195715_394344.csv  cancelled_slots_20250414_195747_822589.csv  cancelled_slots_20250414_201951_245474.csv  cancelled_slots_20250414_202005_025631.csv  cancelled_slots_20250415_125202_208609.csv  cancelled_slots_20250419_164949_374995.csv  cancelled_slots_20250419_184036_068940.csv  cancelled_slots_20250419_184111_211027.csv  cancelled_slots_20250424_090128_762299.csv  cancelled_slots_20250424_090143_603400.csv
dev_tests/: add_test_provider.py  quick_test.py  test_all_repositories.py  test_provider_migration.py  test_user_migration.py  update_user_created_at.py
frontend/: .dockerignore  Dockerfile  README.md  env.local.example  package-lock.json  package.json
src/: __init__.py  api_client.py  auth.py  cancelled_slot_manager.py  config.py  database.py  database_factory.py  db_managers.py  diffstore.py  encryption_utils.py  managers.py  models.py  patient_waitlist_manager.py  supabase_client.py
src/decorators/: trial_required.py
src/models/: __init__.py  patient.py  provider.py  slot.py  user.py
static/: styles.css
templates/: appointment_types.html  base.html  cancelled_appointments.html  edit_cancelled_slot.html  edit_patient.html  index.html  login.html  payment_cancelled.html  payment_success.html  propose_slots.html  providers.html  register.html  settings.html  slots.html  subscription_required.html  trial_status.html
tests/: test_database.py
waitlist_backups/: waitlist_20250401_075215.csv  waitlist_20250401_084933.csv  waitlist_20250401_085313.csv  waitlist_20250401_085321.csv  waitlist_20250401_085323.csv  waitlist_20250401_085326.csv  waitlist_20250401_085328.csv  waitlist_20250401_085329.csv  waitlist_20250401_085331.csv  waitlist_20250402_151449.csv  waitlist_20250403_175640.csv  waitlist_20250406_163318.csv  waitlist_20250408_111109.csv  waitlist_20250408_111120.csv  waitlist_20250408_111158.csv  waitlist_20250410_143913.csv  waitlist_20250410_173307.csv  waitlist_20250410_181200.csv  waitlist_20250410_190119.csv  waitlist_20250414_153207.csv  waitlist_20250414_160527.csv  waitlist_20250414_202009.csv  waitlist_20250424_084925_939853.csv  waitlist_20250424_090143_581703.csv
(+33 files in other folders)
